- Install the plugin with VDR's "make plugins". (If you use make
  plugins, you still need to install the library separately.)

2010-04-11: Version 0.2.2

- Remember query terms and menu positions when moving in history.
- Reduce delays when navigating the menu.
- Install libwebvi.so* links correctly. Run ldconfig.
- Write correct path to /etc/webvi.conf when installing to an
  alternative location.
- Show percentage as ??? on status page if the size is unknown.
- Fixed Youtube module.

2010-07-12: Version 0.3.0

- Scheduled downloading
- Show error details on status screen by pressing Info
- Fix a crash when video URL is empty.
- INI file options for controlling the download quality.
- Add support for Finnish TV stations: MTV3 Katsomo, ruutu.fi, Subtv.
- Make all downloads abortable.
- Fixed Vimeo search.

2010-07-25: Version 0.3.1

- Updated Italian translation (thanks to Diego Pierotto).
- Fixed Youtube extractor.
- Fixed Vimeo search.
- Timers are no longer marked as "Unfinished" after the download has
  been completed.
- Retry failed timers again later.

2010-08-26: Version 0.3.2

- Plugin: Possibility to run a script after downloading.
- New video service: MoonTV (contributed by Matti Lehtimäki).
- ruutu.fi uses rtmpe for some videos.
- Stream low bandwidth Youtube videos by default (configurable in
  /etc/webvi.conf)
- Fixed Google video module.
- Disabled ruutu.fi search which is not working.

2010-11-18: Version 0.4.0

- SVDRP commands for playing and downloading videos (based on a patch
  by Matti Lehtimäki).
- Bookmarklet for sending a video from web browser to VDR.
- Correct template path in webvi.plugin.conf, respect user CXXFLAGS,
  SYSLIBDIR and DESTDIR in Makefiles, fix typos (patches by Ville
  Skyttä).
- Support VDR 1.7 series by including Make.global.
- Command line arguments override config file options.
- Fixes for Youtube, Metacafe and Google modules.

Version 0.4.1

- Accept -p as alternative to --postprocess (thanks to Matti Lehtimäki).
